# rustfs

./: Cargo.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/common/src/: globals.rs
crates/common/tests/: connection_health_test.rs
crates/config/src/constants/: app.rs
crates/ecstore/: Cargo.toml
crates/ecstore/src/: lib.rs  quorum_manager.rs
crates/notify/: Cargo.toml
crates/obs/src/metrics/: cluster_health.rs
crates/obs/src/metrics/entry/: metric_name.rs
crates/quorum/: Cargo.toml
crates/quorum/src/: error.rs  lib.rs  verifier.rs
crates/rio/: Cargo.toml  ENHANCEMENT.md  FURTHER_OPTIMIZATIONS.md  README.md
crates/rio/benches/: advanced_io_benchmark.rs  disk_io_benchmark.rs
crates/rio/examples/: advanced_optimizations_demo.rs  advanced_pipeline_demo.rs  high_performance_io.rs  optimizations_showcase.rs  performance_demo.rs
crates/rio/src/: advanced_buffer_pool.rs  compress_reader.rs  disk.rs  encrypt_reader.rs  etag.rs  etag_reader.rs  hardlimit_reader.rs  hash_reader.rs  http_reader.rs  io_engine.rs  lib.rs  performance_monitor.rs  predictive_optimizer.rs  reader.rs  runtime.rs  wal.rs  writer.rs
crates/topology/: Cargo.toml
crates/topology/src/: health_monitor.rs  lib.rs  metrics_collector.rs  topology.rs  types.rs
docs/: cluster-power-failure-recovery.md  ec-quorum-management.md
rustfs/: Cargo.toml
rustfs/src/: cluster_manager.rs  main.rs
rustfs/tests/: cluster_integration_test.rs
scripts/: run.sh
