# Copyright 2024 RustFS Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rustfs-rio"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
description = "Rio is a RustFS component that provides a high-performance, asynchronous I/O framework for building scalable and efficient applications."
keywords = ["asynchronous", "IO", "framework", "rustfs", "Minio"]
categories = ["web-programming", "development-tools", "asynchronous"]
documentation = "https://docs.rs/rustfs-rio/latest/rustfs_rio/"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
http.workspace = true
aes-gcm = { workspace = true }
crc32fast = { workspace = true }
pin-project-lite.workspace = true
serde = { workspace = true }
bytes.workspace = true
reqwest.workspace = true
tokio-util.workspace = true
futures.workspace = true
rustfs-utils = { workspace = true, features = ["io", "hash", "compress"] }
serde_json.workspace = true
md-5 = { workspace = true }

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# io_uring support (Linux only) - Use default features
monoio = { version = "0.2", optional = true }
monoio-compat = { version = "0.2", optional = true }

# Metrics and observability - Enhanced tracing support
metrics = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-futures = { version = "0.2", optional = true }

# Resource management
scopeguard = "1.2"

# Semaphore for concurrency control - Enhanced with sync primitives
async-semaphore = "1.2"
tokio-stream = "0.1"

# Performance optimization
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Advanced optimization dependencies
time = "0.3"

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
tracing-subscriber = { workspace = true }

[features]
default = []
io_uring = ["monoio", "monoio-compat", "tracing-futures"]
metrics = ["dep:metrics"]
advanced_tracing = ["tracing-futures"]
full = ["io_uring", "metrics", "advanced_tracing"]

[[bench]]
name = "disk_io_benchmark"
harness = false

[[bench]]
name = "advanced_io_benchmark"
harness = false