# Copyright 2024 RustFS Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rustfs-topology"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Global topology and node state management for RustFS cluster"
keywords = ["topology", "cluster", "state-management", "health-monitoring"]
categories.workspace = true

[dependencies]

# Async Runtime
tokio = { workspace = true, features = ["sync", "time", "macros"] }

# Data Structures
dashmap = "6.1.0"
hashbrown = { workspace = true }

# Serialization
serde = { workspace = true }

# Error Handling
anyhow = { workspace = true }

# Logging and Metrics
tracing = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
